<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".SignupActivity"
                android:background="#c9cad3">

    <EditText
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsername"
        android:layout_alignParentTop="true"
        android:layout_marginTop="126dp"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword"
        android:hint="@string/Username"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_alignEnd="@+id/txtPassword"/>

    <EditText
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:layout_below="@+id/txtUsername"
        android:layout_centerHorizontal="true"
        android:hint="@string/Password" />



    <EditText
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Name"
        android:ems="10"
        android:id="@+id/txtName"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <EditText
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:layout_below="@+id/txtName"
        android:layout_centerHorizontal="true"
        android:hint="@string/Email" />



    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rdioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/txtEmail"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

        <RadioButton android:id="@+id/panda"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/panda"
                     android:onClick="onRadioButtonClicked"
                     android:checked="false"
                     android:layout_below="@+id/txtEmail"
                     android:layout_alignLeft="@+id/btnSend"
                     android:layout_alignStart="@+id/btnSend" />

        <RadioButton android:id="@+id/rednose"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/rednose"
                     android:onClick="onRadioButtonClicked"
                     android:checked="false"
                     android:layout_alignTop="@+id/panda"
                     android:layout_toLeftOf="@+id/panda"
                     android:layout_toStartOf="@+id/panda" />

        <RadioButton android:id="@+id/redface"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/redface"
                     android:onClick="onRadioButtonClicked"
                     android:checked="false"
                     android:layout_alignTop="@+id/rednose"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">


    </LinearLayout>

    <Button
        android:text="@string/Send"
        android:id="@+id/btnSend"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="right"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/rdioGroup"
        android:layout_alignRight="@+id/rdioGroup"
        android:layout_alignEnd="@+id/rdioGroup"
        android:layout_marginRight="34dp"
        android:layout_marginEnd="34dp"/>

    <Button
        android:text="Reset"
        android:id="@+id/btnReset"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignTop="@+id/btnSend"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"/>
</RelativeLayout>
